# CHARMPheno

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  index.html  pyproject.toml
.github/workflows/: dashboard.yml
analysis/: __init__.py  _eval_common.py
analysis/cloud/: CLUSTER_DEPS.md  CLUSTER_PEX_DEPS.md  Makefile  _corpus_cache.py  _corpus_load.py  _covariates_cache.py  _covariates_load.py  _driver_common.py  _log_utils.py  bq_smoke_cloud.py  build_dashboard_cloud.py  build_stm_covariates.py  cluster-requirements.txt  doc_size_evals.ipynb  eval_coherence_cloud.py  hdp_bigquery_cloud.py  inspect_app.py  lda_bigquery_cloud.py  run.sh  run_lda_w_eval.sh  setup_aou.sh  setup_workspace.py  smoke_lda_cloud.py  stm_bigquery_cloud.py
analysis/local/: build_dashboard.py  compare_lda_local.py  eval_coherence.py  fit_charmpheno_local.py  fit_hdp_local.py  fit_lda_local.py  fit_stm_local.py  stm_ablation.py
assets/: index-1xyU5W9Q.js  index-B-U6nOh3.js  index-B2GZC7AV.css  index-BBRFkuaJ.js  index-BErNuZCb.css  index-BGli3M4z.js  index-Bf5GXL3M.css  index-BvZWcFig.css  index-BxqXvLtQ.js  index-C4CHGfH5.css  index-C5IKghhi.js  index-CHZI1hzA.js  index-CNhoMRXG.css  index-CPMB7Al5.css  index-CU9_QMNQ.js  index-CUsyDu2b.css  index-CZu8IhpQ.js  index-Crf5HJur.js  index-CsR-t6cG.css  index-Cx7xRW2y.css  index-D2MSIjzR.js  index-DJTQ6cxQ.js  index-DbYMVMkY.css  index-Dee-OsoS.js  index-Dfy12n-b.js  index-GOwkXaM1.css  index-HGw3AsAx.js  index-Tpvl1Xct.css  index-ZqI1Ha0H.js  index-bYXtuQ8I.js  index-vSUq63Hi.js
charmpheno/: Makefile  README.md  pyproject.toml
charmpheno/charmpheno/: __init__.py
charmpheno/charmpheno/evaluate/: lda_compare.py  topic_alignment.py
charmpheno/charmpheno/export/: corpus_stats.py  correlation.py  covariate_schema.py  dashboard.py  gating.py  model_adapter.py  theta_aggregates.py
charmpheno/charmpheno/omop/: __init__.py  bigquery.py  cohorts.py  covariates.py  doc_spec.py  local.py  schema.py  split.py  topic_prep.py
charmpheno/charmpheno/phenotype/: __init__.py  charm_pheno_hdp.py
charmpheno/tests/: conftest.py  test_bigquery.py  test_bigquery_stub.py  test_charm_pheno_hdp_wrapper.py  test_cohorts.py  test_correlation_export.py  test_covariate_diagnostics.py  test_covariate_schema.py  test_covariates_build.py  test_doc_spec.py  test_export_corpus_stats.py  test_export_dashboard.py  test_export_dashboard_stm.py  test_export_model_adapter.py  test_gating_export.py  test_lda_compare.py  test_load_omop_parquet.py  test_schema.py  test_split.py  test_stm_smoke.py  test_theta_aggregates.py  test_to_bow_dataframe.py  test_topic_alignment.py
charmpheno/tests/data/: tiny_omop.parquet
dashboard/: Makefile  README.md  index.html  package-lock.json  package.json  vite.config.ts
dashboard/src/: App.svelte  app.css
data/: manifest.json  phenotypes.json  vocab.json
data/cancer/: corpus_stats.json  model.json  phenotypes.json
data/dementia/: corpus_stats.json  model.json  vocab.json
data/general/: corpus_stats.json  phenotypes.json  vocab.json
data/local-test/: model.json  vocab.json
docs/: REVIEW_LOG.md
docs/architecture/: RISKS_AND_MITIGATIONS.md  SPARK_VI_FRAMEWORK.md  TOPIC_STATE_MODELING.md
docs/decisions/: 0001-single-repo-layout.md  0002-package-boundaries.md  0003-explicit-omop-io.md  0004-pure-python-zip-invariant.md  0005-mini-batch-sampling.md  0006-unified-persistence-format.md  README.md  (+30 more)
scripts/: build_dashboard_manifest.py  check_no_data_files.sh  fetch_lda_beta.py  gated_dashboard_demo.sh  label_phenotypes.py  make_dev_bundle.py  migrate_checkpoint_drop_gamma.py  run_experiment.py  simulate_gated_omop.py  simulate_lda_omop.py
spark-vi/: .gitignore  Makefile  README.md  pyproject.toml
spark-vi/probes/: alpha_drift_probe.py  diagnose_collapse.py  diagnose_collapse_in_spark.py
spark-vi/spark_vi/: __init__.py
spark-vi/spark_vi/core/: __init__.py  config.py  model.py  result.py  runner.py  types.py
spark-vi/spark_vi/diagnostics/: __init__.py  checkpoint.py  persist.py
spark-vi/spark_vi/eval/: __init__.py
spark-vi/spark_vi/eval/topic/: __init__.py  coherence.py  hdp_helpers.py  types.py
spark-vi/spark_vi/inference/: __init__.py  concentration_optimization.py
spark-vi/spark_vi/io/: __init__.py  export.py
spark-vi/spark_vi/mllib/: __init__.py  _common.py  hdp.py  lda.py
spark-vi/spark_vi/mllib/topic/: __init__.py  _common.py  _formula.py  hdp.py  lda.py  stm.py
spark-vi/spark_vi/models/: __init__.py  counting.py  lda.py  online_hdp.py
spark-vi/spark_vi/models/topic/: __init__.py  _linalg.py  diagnostics.py  lda.py  online_hdp.py  partition.py  spectral_init.py  spectral_init_scalable.py  stm.py  types.py
spark-vi/tests/: _stm_synth.py  conftest.py  test_bow_document.py  test_broadcast_lifecycle.py  test_checkpoint.py  test_concentration_optimization.py  test_config.py  test_counting_model.py  test_export.py  test_lda_contract.py  test_lda_integration.py  test_lda_math.py  test_linalg.py  test_linalg_pd_complete.py  test_mllib_hdp.py  test_mllib_hdp_persistence.py  test_mllib_lda.py  test_mllib_lda_persistence.py  test_mllib_stm.py  test_mllib_stm_formula.py  test_mllib_stm_persistence.py  test_online_hdp_integration.py  test_online_hdp_unit.py  test_persist_check.py  test_result.py  test_runner.py  test_spectral_init.py  test_spectral_init_scalable.py  test_spectral_init_scalable_equivalence.py  test_stm_blockwise.py  test_stm_blockwise_integration.py  test_stm_contract.py  test_stm_full_sigma.py  test_stm_hardening.py  test_stm_integration.py  test_stm_math.py  test_stm_pd_completion_conditioning.py  test_stm_reference.py  test_stm_sigma_completion.py  test_topic_block_partition.py  (+3 more)
spark-vi/tests/eval/: conftest.py  test_coherence.py  test_coherence_smoke.py  test_hdp_helpers.py  test_types.py
(+235 files in other folders)
