[tool.poetry]
name = "charmpheno-monorepo"
version = "0.0.0"
description = "Monorepo root for dev tooling and scripts. Not distributable."
authors = ["CHARMPheno contributors"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
datasets = ">=2.18"
pandas = ">=2.0"
pyarrow = ">=15.0"
numpy = ">=1.24"

[tool.poetry.group.dev.dependencies]
pre-commit = ">=3.6"
pytest = ">=7.0"
nbformat = "^5.10.4"
nbstripout = ">=0.7"

# Optional: deps for the post-fit phenotype-labeling script.
# Install with `poetry install --with labeling`. Kept out of the default
# group so cluster/CI installs don't pull the Anthropic SDK (and so a stray
# ANTHROPIC_API_KEY in the shell can't be accidentally picked up by other
# tooling — the script reads CHARMPHENO_LABEL_KEY by default, not the SDK's
# default env var).
[tool.poetry.group.labeling]
optional = true

[tool.poetry.group.labeling.dependencies]
anthropic = ">=0.40"
python-dotenv = ">=1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
markers = [
    "slow: integration tests with minutes-scale local Spark (run via make test-all)",
    "cluster: tests that require a real Dataproc cluster (manual only)",
]
